hphp/test/zend/good/zend/ns_077_3.php
<?php
namespace foo;

function foo($a = array(namespace\unknown => unknown))
{
}

foo();