hphp/test/zend/bad/zend/ns_077_8.php
<?php

function foo($a = array(namespace\unknown => unknown))
{
}

foo();